--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "profile",
     "placeholder"
   ],
-  "author": "Pleroma",
+  "author": "EverPleroma",
   "contributors": [
     "Zah",
     "Michael Ikechukwu Mba",
