--- a/react-custom-avatar/package.json
+++ b/react-custom-avatar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-custom-avatar",
+  "name": "custom-avatar-component",
   "private": true,
   "version": "1.0.0",
   "type": "module",
